deployment/kubernetes/counting-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app.kubernetes.io/name: fastapi
    app.kubernetes.io/component: api
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: fastapi
    app.kubernetes.io/component: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  labels:
    app.kubernetes.io/name: fastapi
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fastapi
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fastapi
        app.kubernetes.io/component: api
    spec:
      containers:
      - name: fastapi
        image: ghcr.io/codeformuenster/mshack2020-counting-backend:master-9efb1b1
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: counting-backend
  labels:
    app.kubernetes.io/name: fastapi
    app.kubernetes.io/component: api
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
  - host: counting-backend.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: fastapi
          servicePort: 8080
  tls:
  - hosts:
    - counting-backend.codeformuenster.org
    secretName: counting-backend-tls
